crates/rudolint-rules/tests/snapshots/rule_fixtures__dl3063_reserved_stage_name_fixture.snap
---
source: crates/rudolint-rules/tests/rule_fixtures.rs
assertion_line: 1198
expression: "serde_json::to_value(&findings).expect(\"findings should serialize\")"
---
[
  {
    "code": "DL3063",
    "help": null,
    "labels": [],
    "message": "stage name should not be a reserved word",
    "path": "",
    "primary_span": {
      "end_byte": 27,
      "end_column": 28,
      "end_line": 1,
      "start_byte": 0,
      "start_column": 1,
      "start_line": 1
    },
    "severity": "warning"
  },
  {
    "code": "DL3063",
    "help": null,
    "labels": [],
    "message": "stage name should not be a reserved word",
    "path": "",
    "primary_span": {
      "end_byte": 73,
      "end_column": 28,
      "end_line": 4,
      "start_byte": 46,
      "start_column": 1,
      "start_line": 4
    },
    "severity": "warning"
  },
  {
    "code": "DL3063",
    "help": null,
    "labels": [],
    "message": "stage name should not be a reserved word",
    "path": "",
    "primary_span": {
      "end_byte": 161,
      "end_column": 28,
      "end_line": 10,
      "start_byte": 134,
      "start_column": 1,
      "start_line": 10
    },
    "severity": "warning"
  },
  {
    "code": "DL3063",
    "help": null,
    "labels": [],
    "message": "stage name should not be a reserved word",
    "path": "",
    "primary_span": {
      "end_byte": 218,
      "end_column": 28,
      "end_line": 13,
      "start_byte": 191,
      "start_column": 1,
      "start_line": 13
    },
    "severity": "warning"
  }
]
