crates/rudolint-rules/tests/snapshots/rule_fixtures__dl4001_either_wget_or_curl_fixture.snap
---
source: crates/rudolint-rules/tests/rule_fixtures.rs
assertion_line: 1239
expression: "serde_json::to_value(&findings).expect(\"findings should serialize\")"
---
[
  {
    "code": "DL4001",
    "help": null,
    "labels": [],
    "message": "either use wget or curl but not both",
    "path": "",
    "primary_span": {
      "end_byte": 94,
      "end_column": 31,
      "end_line": 3,
      "start_byte": 64,
      "start_column": 1,
      "start_line": 3
    },
    "severity": "warning"
  },
  {
    "code": "DL4001",
    "help": null,
    "labels": [],
    "message": "either use wget or curl but not both",
    "path": "",
    "primary_span": {
      "end_byte": 319,
      "end_column": 68,
      "end_line": 11,
      "start_byte": 252,
      "start_column": 1,
      "start_line": 11
    },
    "severity": "warning"
  }
]
