crates/rudolint-rules/tests/snapshots/rule_fixtures__dl4003_cmd_cardinality_fixture.snap
---
source: crates/rudolint-rules/tests/rule_fixtures.rs
assertion_line: 1271
expression: "serde_json::to_value(&cases).expect(\"cases should serialize\")"
---
[
  {
    "findings": [],
    "fixture": "DL4003.no-cmd"
  },
  {
    "findings": [],
    "fixture": "DL4003.single-cmd"
  },
  {
    "findings": [
      {
        "code": "DL4003",
        "help": null,
        "labels": [],
        "message": "only the final CMD is used",
        "path": "",
        "primary_span": {
          "end_byte": 64,
          "end_column": 13,
          "end_line": 4,
          "start_byte": 52,
          "start_column": 1,
          "start_line": 4
        },
        "severity": "warning"
      },
      {
        "code": "DL4003",
        "help": null,
        "labels": [],
        "message": "only the final CMD is used",
        "path": "",
        "primary_span": {
          "end_byte": 86,
          "end_column": 22,
          "end_line": 5,
          "start_byte": 65,
          "start_column": 1,
          "start_line": 5
        },
        "severity": "warning"
      }
    ],
    "fixture": "DL4003.duplicate-cmd"
  }
]
