crates/rudolint-rules/tests/snapshots/rule_fixtures__dl4005_use_shell_for_default_shell_fixture.snap
---
source: crates/rudolint-rules/tests/rule_fixtures.rs
assertion_line: 1319
expression: "serde_json::to_value(&findings).expect(\"findings should serialize\")"
---
[
  {
    "code": "DL4005",
    "help": null,
    "labels": [],
    "message": "use SHELL to change the default shell",
    "path": "",
    "primary_span": {
      "end_byte": 45,
      "end_column": 29,
      "end_line": 2,
      "start_byte": 17,
      "start_column": 1,
      "start_line": 2
    },
    "severity": "warning"
  }
]
