crates/rudolint-rules/tests/snapshots/rule_fixtures__initial_shell_rule_findings.snap
---
source: crates/rudolint-rules/tests/rule_fixtures.rs
assertion_line: 68
expression: "serde_json::to_value(&findings).expect(\"findings should serialize\")"
---
[
  {
    "code": "RSC2086",
    "help": null,
    "labels": [],
    "message": "quote variable expansions to prevent word splitting and globbing",
    "path": "",
    "primary_span": {
      "end_byte": 31,
      "end_column": 15,
      "end_line": 2,
      "start_byte": 17,
      "start_column": 1,
      "start_line": 2
    },
    "severity": "warning"
  },
  {
    "code": "RSC2046",
    "help": null,
    "labels": [],
    "message": "quote command substitutions to prevent word splitting",
    "path": "",
    "primary_span": {
      "end_byte": 66,
      "end_column": 18,
      "end_line": 4,
      "start_byte": 49,
      "start_column": 1,
      "start_line": 4
    },
    "severity": "warning"
  },
  {
    "code": "RSC2015",
    "help": null,
    "labels": [],
    "message": "A && B || C is not a safe conditional expression",
    "path": "",
    "primary_span": {
      "end_byte": 128,
      "end_column": 42,
      "end_line": 6,
      "start_byte": 87,
      "start_column": 1,
      "start_line": 6
    },
    "severity": "warning"
  },
  {
    "code": "RSC2155",
    "help": null,
    "labels": [],
    "message": "declare and assign separately to avoid masking command failures",
    "path": "",
    "primary_span": {
      "end_byte": 240,
      "end_column": 31,
      "end_line": 9,
      "start_byte": 210,
      "start_column": 1,
      "start_line": 9
    },
    "severity": "warning"
  },
  {
    "code": "RSC2164",
    "help": null,
    "labels": [],
    "message": "check cd exit status before running more commands",
    "path": "",
    "primary_span": {
      "end_byte": 291,
      "end_column": 18,
      "end_line": 11,
      "start_byte": 274,
      "start_column": 1,
      "start_line": 11
    },
    "severity": "warning"
  }
]
